updated templates to itrules 2.0.0